--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -3,11 +3,11 @@ services:
     image: redis:latest
     container_name: redis-server
     ports:
-      - "6380:6379"
+      - "6379:6379"
     volumes:
       - redis-data:/data
     platform: linux/amd64  # x86 플랫폼에 맞추기
-    command: ["redis-server", "/opt/homebrew/etc/redis.conf"]
+    command: ["redis-server"] #, "/opt/homebrew/etc/redis.conf"
 
   redis-commander:
     image: rediscommander/redis-commander:latest
