--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -1,4 +1,5 @@
 services:
+  # Redis 서비스 정의
   redis:
     image: redis:latest
     container_name: redis-server
@@ -8,7 +9,8 @@ services:
       - redis-data:/data
     platform: linux/amd64  # x86 플랫폼에 맞추기
     command: ["redis-server"] #, "/opt/homebrew/etc/redis.conf"
-
+  
+  #Redis Commander
   redis-commander:
     image: rediscommander/redis-commander:latest
     container_name: redis-commander
@@ -19,6 +21,34 @@ services:
     depends_on:
       - redis
     platform: linux/amd64  # x86 플랫폼에 맞추기
+
+  #Nest.js 서비스 정의
+    nest-app:
+    build:
+      context: ./backend
+      dockerfile: dockerfile
+      container_name: nest-app
+      ports:
+        - "4000:4000"
+      environment:
+        - "NODE_ENV=development"
+      depends_on:
+        - redis
+      volumes:
+        - ./backend:/pub-subproject
+
+  #React 서비스 정의
+  react-app:
+    build: 
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: react-app
+    ports:
+      - "3000:3000"
+    depends_on:
+      - nest-app
+    volumes:
+      - ./frontend:/chat-app
 
 volumes:
   redis-data:
